# information-process

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-EN.md  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/linux/: README.md  config.linux.example.toml  infoproc.env.example
deploy/linux/rootless/: README-EN.md  README.md  install.sh
deploy/linux/rootless/lib/: common.sh
deploy/linux/rootless/templates/: config.user.example.toml  infoproc.user.env.example
docs/: ARCHITECTURE.md  DEPLOY.md  INSTALL.md
scripts/: bootstrap_linux.sh  build_rootless_bundle.py  download_models.ps1  install_codex_skill.py  setup_local_env.ps1
skills/infoproc-linux-release/: SKILL.md
skills/infoproc-multimodal-processing/: SKILL.md
src/infoproc/: __init__.py  __main__.py  aggregate.py  cli.py  config.py  execution.py  models.py  pipeline.py  utils.py
src/infoproc/adapters/: __init__.py  base.py  document.py  media.py  placeholder.py  text.py
src/infoproc/prompts/: distill.md  rank.md
src/infoproc/services/: __init__.py  clean.py  distill.py  documents.py  openai_client.py  prompts.py  transcription.py
tests/: test_aggregate.py  test_clean.py  test_cli.py  test_config.py  test_job_store.py  test_pipeline_text.py  test_prompts.py
